# fastapi-rf

./: .gitignore  LICENSE  db.sqlite  pyproject.toml  pytest.ini  readme.md
example/: db.sqlite  main.py
example/alembic/: env.py
example/config/: database.py  redis.py  urls.py  views.py
example/keto/: models.py  serializers.py  views.py
example/keto/api/: read.py
example/organization/: models.py  serializers.py  views.py
example/test/: conftest.py  db.sqlite  test_organization.py  test_user.py
example/user/: authorization.py  mixin.py  models.py  router.py  serializers.py  utils.py  views.py
example/user/views/: __init__.py  account.py  info.py  sms.py  wxapp.py
fastapi_rf/: authorization.py  core.py  dependency.py  mixin.py  models.py  pagination.py  serializers.py  utils.py  views.py
fastapi_rf/decorators/: timeout.py
fastapi_rf/filter/: __init__.py  base.py  filter.py  mixin.py
fastapi_rf/permission/: __init__.py  mixin.py  permission.py
src/: db.sqlite  main.py
src/alembic/: env.py
src/alembic/versions/: 0583d3e6e146_auto_create.py  9836772e0156_user_email.py  a34dca1247cd_auto_create.py
src/config/: settings.py
src/core/: dependency.py  pagination.py  serializers.py  utils.py  views.py
src/keto/: definitions.py  engine.py  models.py  serializers.py  views.py
src/keto/api/: write.py
src/organization/: models.py  serializers.py
src/user/: authorization.py  models.py  serializers.py  utils.py  views.py
src/user/views/: __init__.py  account.py  sms.py  wxapp.py
