[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Brady <baoshenghu@citydnatech.com>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.11.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.17"}
aiosqlite = "^0.19.0"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
